--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -305,7 +305,7 @@
 
     \vspace{6mm}
 
-    \textit{Para ver información más detallada de las gráficas y sus valores, consultar [Anexo 4]}
+    \textit{Para ver información más detallada de las gráficas y sus valores, consultar [Anexo 4]}.
 
 
 
