--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -68,7 +68,7 @@
 
   \begin{figure}[h]
       \centering
-      \includegraphics[width=400px]{img/Neuron.png}
+      \includegraphics[width=400px]{img/neuron.png}
       \captionsetup{labelformat=empty}
       \caption{Estructura de una neurona}
       % \label{fig:graf_exp1}
