Cmabio de formatos

--- a/Practica1/memoria/main.tex
+++ b/Practica1/memoria/main.tex
@@ -26,7 +26,7 @@
 \setlength{\parindent}{0pt}
 \begin{titlepage}
         \centering
-        \includegraphics[width=0.75\textwidth]{img/logo_uc3m.jpg}\par\vspace{3cm}
+        \includegraphics[width=0.75\textwidth]{img/logo_uc3m.jpg}\par\vspace{2cm}
         {\huge\bfseries Práctica 1 \\ Aplicación de RNA\par}
         \vspace{0.5cm}
         {\scshape\Large Inteligencia Artificial en las Organizaciones\par}
@@ -44,6 +44,8 @@
         \vspace{1cm}
         {\Large\itshape Alejandro Valverde Mahou\par}
         {\Large 100383383@alumnos.uc3m.es\par}
+        \vspace{5mm}
+        {\large GitHub: \textbf{\textit{\href{https://github.com/Pheithar/InteligenciaArtificialOrganizaciones}{InteligenciaArtificialOrganizaciones}}}}
         \vfill
 
 % Bottom of the page
